--- a/alphatrader-ai/package.json
+++ b/alphatrader-ai/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
+    "@tanstack/react-virtual": "^3.13.13",
     "@upstash/redis": "^1.36.0",
     "alphavantage-ts": "^1.1.4",
     "bcryptjs": "^3.0.3",
